Closed Bug 731423 Opened 14 years ago Closed 13 years ago

GC: Don't do incremental GCs during V8

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15
Tracking Status
firefox10 --- unaffected
firefox11 --- unaffected
firefox12 --- unaffected
firefox13 - unaffected

People

(Reporter: gwagner, Assigned: billm)

References

Details

Attachments

(1 file)

I see a regression on splay from Aurora to Nightly from about 8350 to 6950 on my MP. The GC log shows that the GC pause time increased from around 40ms to 60ms because of reset GCs.
Fixed for now by the disabling of IGC.
The current scores when I enable/disable IGC in a nightly: disabled: around 7900 enabled: around 6600
Blocks: 735099
No longer blocks: IncrementalGC
Assignee: general → wmccloskey
Attached patch patchSplinter Review
I wasn't able to reproduce the performance difference. However, we were running incremental GCs during V8, which could certainly affect performance. With this patch, all my GCs during V8 are non-incremental. It just ensures that if we hit the allocation trigger, we always do an incremental GC. We never really hit this during interactive apps, since they'll always go through the MaybeGC trigger first.
Attachment #626583 - Flags: review?(anygregor)
(In reply to Bill McCloskey (:billm) from comment #3) > Created attachment 626583 [details] [diff] [review] > patch > > I wasn't able to reproduce the performance difference. However, we were > running incremental GCs during V8, which could certainly affect performance. > With this patch, all my GCs during V8 are non-incremental. It just ensures > that if we hit the allocation trigger, we always do an incremental GC. We > never really hit this during interactive apps, since they'll always go > through the MaybeGC trigger first. Yep the performance regression is gone even without this patch. Did some allocation trigger change within the last 3 weeks? Anyways this patch also makes sense. Maybe you should change the the summary.
Attachment #626583 - Flags: review?(anygregor) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/95e2e6a47831 I don't know what would have changed the score. A lot has been changing lately.
Summary: GC: V8 splay regression → GC: Don't do incremental GCs during V8
Target Milestone: --- → mozilla15
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: