Bug 731423 - Don't do incremental GC when hitting alloc trigger (r=gwagner)